# rust_webscraping

./: Cargo.toml  README.md
src/: baixar.rs  main.rs
