[package]
name = "rust_download_img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.7"
scraper = "0.21.0"
indicatif = "0.17"
dialoguer = "0.11"
url = "2.5.3"
select = "*"